--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,12 @@ repositories {
 dependencies {
     compileOnly('org.projectlombok:lombok:1.18.4')
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    compile 'mysql:mysql-connector-java'
 
     testCompile("junit:junit")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 jar {
